# JinjaWebMaker

./: CMakeLists.txt  README.md  create_f.cpp  create_f.hpp  export.cpp  export.hpp  filewatcher.cpp  filewatcher.hpp  main.cpp  webserver.cpp  webserver.hpp  websocket.cpp  websocket.hpp
dependencies/WebSocket/: .WebSocket.cpp.swp  .WebSocket.h.swp  WebSocket.cpp
dependencies/WebSocket/base64/: .base64.cpp.swp  .base64.h.swp
dependencies/WebSocket/sha1/: .sha1.cpp.swp  .sha1.h.swp
